Toaster no longer appears behind events panel
Fixes #305
According to Foxandxss/angular-toastr#191 this is a z-index n issue
caused by css-nano (css minifier). Can be solvled by replacing it (the
minifier) or specifying our own z-index (which seems logica to me since
we have our own z-indexing for elemets)

--- a/src/app/common/styles/_common.scss
+++ b/src/app/common/styles/_common.scss
@@ -221,6 +221,10 @@ iframe {
   border: none;
 }
 
+#toast-container {
+  z-index: 99999;
+}
+
 // PRELOADING IMAGES
 :root:before {
   content: url('/styles/resources/app/common/images/disconnected-triangle.svg');
